--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -179,9 +179,9 @@ PELA:
   seed_before_pollen_costs_scale: [flower_stigma]
 PEPU:
   packaging_dispersal_inv: [cone_brown]
-  postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, fruit_empty, cone_just_starting_01, cone_just_starting_02, cone_young_01, cone_young_02, cone_young_03, cone_young_04]
+  postpollen_aborted_inv: [fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_aborted, fruit_empty]
   prepollen_aborted_inv: [bud_aborted, bud_tiny, bud_big, cone_aborted]
-  prepollen_success_inv: [flower_petals, flower_stigma, flower_calyx, cone_green_01, cone_green_02, cone_green_03, cone_green_04]
+  prepollen_success_inv: [flower_petals, flower_stigma, flower_calyx]
   propagule_inv: [fruit_mature]
   seed_costs: [cone_brown, flower_petals, flower_calyx, fruit_mature]
   seed_costs_scale: [fruit_mature, flower_petals, flower_calyx, fruit_mature]
@@ -189,10 +189,10 @@ PEPU:
   prepollen_costs_scale: [flower_petals, flower_calyx, flower_stigma]
   dispersal_costs: [cone_brown]
   dispersal_costs_scale: [fruit_mature]
-  dispersal_costs_adjust: [0.5]
+  dispersal_costs_adjust: [0.853]
   dispersal_before_pollen_costs: [cone_brown]
   dispersal_before_pollen_costs_scale: [flower_petals]
-  dispersal_before_pollen_costs_adjust: [0.5]
+  dispersal_before_pollen_costs_adjust: [0.147]
   seed_before_pollen_costs: [flower_stigma]
   seed_before_pollen_costs_scale: [flower_stigma]
 PHPH:
