Add categories for accessory part counts into yml
- Should enable more fin-scale tuning by species
- Also moved location of counting from inside Investment into it's own function
- Closes #28

--- a/remake_species_data.yml
+++ b/remake_species_data.yml
@@ -31,6 +31,10 @@ targets:
     command: >
       CalculateReproductiveCostsForBAER(BAER_IndividualsList, InvestmentCategories, BAER_Investment)
 
+  BAER_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForBAER(BAER_IndividualsList, InvestmentCategories, BAER_Investment)
+
   BAER_Growth:
     command: >
       CalculateGrowthForBAER(BAER_HarvestData, BAER_IndividualsList)
@@ -63,6 +67,10 @@ targets:
   BOLE_ReproductiveCosts:
     command: >
       CalculateReproductiveCostsForBOLE(BOLE_IndividualsList, InvestmentCategories, BOLE_Investment)
+
+  BOLE_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForBOLE(BOLE_IndividualsList, InvestmentCategories, BOLE_Investment)
 
   BOLE_Growth:
     command: >
@@ -97,6 +105,10 @@ targets:
     command: >
       CalculateReproductiveCostsForCOER(COER_IndividualsList, InvestmentCategories, COER_Investment)
 
+  COER_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForCOER(COER_IndividualsList, InvestmentCategories, COER_Investment)
+
   COER_Growth:
     command: >
       CalculateGrowthForCOER(COER_HarvestData, COER_IndividualsList)
@@ -129,6 +141,10 @@ targets:
   EPMI_ReproductiveCosts:
     command: >
       CalculateReproductiveCostsForEPMI(EPMI_IndividualsList, InvestmentCategories, EPMI_Investment)
+
+  EPMI_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForEPMI(EPMI_IndividualsList, InvestmentCategories, EPMI_Investment)
 
   EPMI_Growth:
     command: >
@@ -163,6 +179,10 @@ targets:
     command: >
       CalculateReproductiveCostsForGRBU(GRBU_IndividualsList, InvestmentCategories, GRBU_Investment)
 
+  GRBU_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForGRBU(GRBU_IndividualsList, InvestmentCategories, GRBU_Investment)
+
   GRBU_Growth:
     command: >
       CalculateGrowthForGRBU(GRBU_HarvestData, GRBU_IndividualsList)
@@ -195,6 +215,10 @@ targets:
   GRSP_ReproductiveCosts:
     command: >
       CalculateReproductiveCostsForGRSP(GRSP_IndividualsList, InvestmentCategories, GRSP_Investment)
+
+  GRSP_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForGRSP(GRSP_IndividualsList, InvestmentCategories, GRSP_Investment)
 
   GRSP_Growth:
     command: >
@@ -229,6 +253,10 @@ targets:
     command: >
       CalculateReproductiveCostsForHATE(HATE_IndividualsList, InvestmentCategories, HATE_Investment)
 
+  HATE_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForHATE(HATE_IndividualsList, InvestmentCategories, HATE_Investment)
+
   HATE_Growth:
     command: >
       CalculateGrowthForHATE(HATE_HarvestData, HATE_IndividualsList)
@@ -261,6 +289,10 @@ targets:
   HEPU_ReproductiveCosts:
     command: >
       CalculateReproductiveCostsForHEPU(HEPU_IndividualsList, InvestmentCategories, HEPU_Investment)
+
+  HEPU_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForHEPU(HEPU_IndividualsList, InvestmentCategories, HEPU_Investment)
 
   HEPU_Growth:
     command: >
@@ -295,6 +327,10 @@ targets:
     command: >
       CalculateReproductiveCostsForLEES(LEES_IndividualsList, InvestmentCategories, LEES_Investment)
 
+  LEES_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForLEES(LEES_IndividualsList, InvestmentCategories, LEES_Investment)
+
   LEES_Growth:
     command: >
       CalculateGrowthForLEES(LEES_HarvestData, LEES_IndividualsList)
@@ -327,6 +363,10 @@ targets:
   PELA_ReproductiveCosts:
     command: >
       CalculateReproductiveCostsForPELA(PELA_IndividualsList, InvestmentCategories, PELA_Investment)
+
+  PELA_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForPELA(PELA_IndividualsList, InvestmentCategories, PELA_Investment)
 
   PELA_Growth:
     command: >
@@ -361,6 +401,10 @@ targets:
     command: >
       CalculateReproductiveCostsForPEPU(PEPU_IndividualsList, InvestmentCategories, PEPU_Investment)
 
+  PEPU_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForPEPU(PEPU_IndividualsList, InvestmentCategories, PEPU_Investment)
+
   PEPU_Growth:
     command: >
       CalculateGrowthForPEPU(PEPU_HarvestData, PEPU_IndividualsList)
@@ -393,6 +437,10 @@ targets:
   PHPH_ReproductiveCosts:
     command: >
       CalculateReproductiveCostsForPHPH(PHPH_IndividualsList, InvestmentCategories, PHPH_Investment)
+
+  PHPH_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForPHPH(PHPH_IndividualsList, InvestmentCategories, PHPH_Investment)
 
   PHPH_Growth:
     command: >
@@ -427,6 +475,10 @@ targets:
     command: >
       CalculateReproductiveCostsForPILI(PILI_IndividualsList, InvestmentCategories, PILI_Investment)
 
+  PILI_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForPILI(PILI_IndividualsList, InvestmentCategories, PILI_Investment)
+
   PILI_Growth:
     command: >
       CalculateGrowthForPILI(PILI_HarvestData, PILI_IndividualsList)
@@ -459,6 +511,10 @@ targets:
   PUTU_ReproductiveCosts:
     command: >
       CalculateReproductiveCostsForPUTU(PUTU_IndividualsList, InvestmentCategories, PUTU_Investment)
+
+  PUTU_ReproductiveCounts:
+    command: >
+      CalculateReproductiveCountsForPUTU(PUTU_IndividualsList, InvestmentCategories, PUTU_Investment)
 
   PUTU_Growth:
     command: >
@@ -542,19 +598,19 @@ targets:
 
   Accessory_counts_all:
     command: >
-      combine_list_elements(
-        BAER_Investment,
-        BOLE_Investment,
-        COER_Investment,
-        EPMI_Investment,
-        GRBU_Investment,
-        GRSP_Investment,
-        HATE_Investment,
-        HEPU_Investment,
-        LEES_Investment,
-        PELA_Investment,
-        PEPU_Investment,
-        PHPH_Investment,
-        PILI_Investment,
-        PUTU_Investment,
-      element=I("accessory_counts"))
+      combine_data_frames(
+        BAER_ReproductiveCounts,
+        BOLE_ReproductiveCounts,
+        COER_ReproductiveCounts,
+        EPMI_ReproductiveCounts,
+        GRBU_ReproductiveCounts,
+        GRSP_ReproductiveCounts,
+        HATE_ReproductiveCounts,
+        HEPU_ReproductiveCounts,
+        LEES_ReproductiveCounts,
+        PELA_ReproductiveCounts,
+        PEPU_ReproductiveCounts,
+        PHPH_ReproductiveCounts,
+        PILI_ReproductiveCounts,
+        PUTU_ReproductiveCounts,
+        NULL)
