--- a/remake.yml
+++ b/remake.yml
@@ -138,8 +138,7 @@ targets:
 
   SummaryInd1:
     command:
-      - combine_by_individual(IndividualsList, Growth_all, Accessory_counts_all,
-        ReproductiveCosts_all, LMA, leafLifespan, wood_density_spp, seedsize)
+      - combine_by_individual(IndividualsList, Growth_all, ReproductiveCosts_all, LMA, leafLifespan, wood_density_spp, seedsize)
       - sort_by_variable(., variable_list)
 
   SummarySppAge:
