continued trying to fix problems with accounting

--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -1,15 +1,15 @@
 BAER:
-  seed_costs: [cone_brown, cone_base_brown, flower_petals, seed_pod, seed, flower_style]
-  seed_costs_scale: [seed, seed, flower_petals, seed_pod, seed, flower_style]
+  seed_costs: [cone_brown, cone_base_brown, flower_petals, seed_pod, seed, flower_style, cone_brown, cone_base_brown]
+  seed_costs_scale: [seed_pod, seed_pod, flower_petals, seed_pod, seed, flower_style, flower_stigma, flower_stigma]
+  seed_costs_prop_to_use: [0.875,0.875,1.0,1.0,1.0,1.0,0.125,0.125]
   prepollen_FD_success_parts: [flower_petals, flower_style]
   prepollen_FD_success_parts_divisor: [flower_petals, flower_style]
   prepollen_FD_inv_extra_parts: [cone_green_01, cone_green_02, cone_green_03, cone_green_04, cone_base_green_01, cone_base_green_02, cone_base_green_03, cone_base_green_04]
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [cone_brown, cone_base_brown]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals, flower_petals]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.125,0.125]
   packaging_dispersal_parts: [cone_brown, cone_base_brown, seed_pod]
-  packaging_dispersal_parts_divisor: [seed, seed, seed_pod]
+  packaging_dispersal_parts_divisor: [seed_pod, seed_pod, seed_pod]
   packaging_dispersal_parts_postpollen_prop_to_use: [0.875,0.875,1.000]
   propagule_parts: [seed]
   prepollen_parts_aborted_preflowering: [bud_tiny, bud_small, bud_mid, bud_big, bud_just_opening, cone_aborted]  
@@ -20,39 +20,39 @@ BAER:
   cone_count : [cone_green_01, cone_green_02, cone_green_03, cone_green_04, cone_brown_no_expanded_follicles, cone_brown, cone_aborted]
   inflorescence_count : []
 BOLE:
-  seed_costs: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
-  seed_costs_scale: [late_flower_petals, seed_pod, seed, late_finished_flower, pedicel]
+  seed_costs: [late_flower_petals, late_finished_flower, seed_pod, seed, pedicel, flower_petals, finished_flower, late_flower_petals, late_finished_flower]
+  seed_costs_scale: [late_flower_petals, late_finished_flower, seed_pod, seed, pedicel, pedicel, pedicel, pedicel, pedicel]
+  seed_costs_prop_to_use: [0.3947868,0.2877256,1.0,1.0,1.0,1.0,1.0, 0.6052132, 0.7122744]
   prepollen_FD_success_parts: [pedicel]
   prepollen_FD_success_parts_divisor: [pedicel]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [finished_flower_stigma]
-  prepollen_parts_continue_developing_into_pack_disp: [flower_petals, finished_flower,late_flower_petals, late_finished_flower]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals, flower_petals,flower_petals, flower_petals]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [1,1,0.6,0.7]
+  prepollen_parts_continue_developing_into_pack_disp: [flower_petals, finished_flower, late_flower_petals, late_finished_flower]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [1, 1, 0.6052132, 0.7122744]
   packaging_dispersal_parts: [seed_pod, late_flower_petals, late_finished_flower]
   packaging_dispersal_parts_divisor: [seed_pod, late_flower_petals, late_finished_flower]
-  packaging_dispersal_parts_postpollen_prop_to_use: [1,0.3947868,0.2877256]
+  packaging_dispersal_parts_postpollen_prop_to_use: [1.0,0.3947868,0.2877256]
   propagule_parts: [seed]
   prepollen_parts_aborted_preflowering: [bud_tiny, bud_small, bud_mid, bud_big, flower_calyx]
   postpollen_parts_aborted: [fruit_just_starting, fruit_young, fruit_large_immature_01]
-  count_prepollen_reach_flowering: [flower_petals]
+  count_prepollen_reach_flowering: [pedicel]
   count_prepollen_aborted_preflowering: [bud_tiny, bud_small, bud_mid, bud_big, flower_calyx]
   count_postpollen_aborted: [fruit_just_starting, fruit_young, fruit_large_immature_01]
   cone_count : []
   inflorescence_count : []
 COER:
-  seed_costs: [inflorescence_stalk_in_fruit, flower_petals, bract_fruit, fruit_mature]
-  seed_costs_scale: [fruit_mature, flower_petals, bract_fruit, fruit_mature]
+  seed_costs: [inflorescence_stalk, inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, flower_petals, bract_fruit, fruit_mature]
+  seed_costs_scale: [flower_petals, flower_petals, flower_petals, flower_petals, fruit_mature, fruit_mature, fruit_mature, flower_petals, bract_fruit, fruit_mature]
+  seed_costs_prop_to_use: [1.0, 0.5025837,0.2779094,0.2200916,0.4974163,0.722090,0.7799084,1.0,1.0,1.0]
   prepollen_FD_success_parts: [flower_petals]
   prepollen_FD_success_parts_divisor: [flower_petals]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [finished_flower]
   prepollen_parts_continue_developing_into_pack_disp: [inflorescence_stalk, inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals,flower_petals,flower_petals,flower_petals]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [1, 0.5025837,0.2779094,0.2200916]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [1.0, 0.5025837,0.2779094,0.2200916]
   packaging_dispersal_parts: [inflorescence_stalk_in_fruit, inflorescence_stalk_in_fruit_large, inflorescence_stalk_in_fruit_very_large, bract_fruit]
   packaging_dispersal_parts_divisor: [fruit_mature, fruit_mature, fruit_mature, bract_fruit]
-  packaging_dispersal_parts_postpollen_prop_to_use: [0.4974163,0.722090,0.7799084,1]
+  packaging_dispersal_parts_postpollen_prop_to_use: [0.4974163,0.722090,0.7799084,1.0]
   propagule_parts: [fruit_mature]
   prepollen_parts_aborted_preflowering: [inflorescence_bud_tiny, inflorescence_bud_mid, bud_big,flower_stigma]
   postpollen_parts_aborted: [fruit_just_starting, fruit_young, fruit_large_immature_01]
@@ -64,13 +64,37 @@ COER:
 EPMI:
   seed_costs: [flower_petals, seed_pod, seed]
   seed_costs_scale: [flower_petals, seed_pod, seed]
+  seed_costs_prop_to_use: [1.0, 0.3534934, 1.0]
+  seed_costs2: [seed_pod]
+  seed_costs2_divisor: [count_postpollen_all]
+  seed_costs2_prop_to_use: [0.6465066]
+  prepollen_FD_success_parts: [flower_petals]
+  prepollen_FD_success_parts_divisor: [flower_petals]
+  prepollen_FD_inv_extra_parts: []
+  prepollen_parts_continue_developing_into_propagule: [0]
+  prepollen_parts_continue_developing_into_pack_disp: [seed_pod]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.6465066]
+  packaging_dispersal_parts: [seed_pod]
+  packaging_dispersal_parts_divisor: [seed_pod]
+  packaging_dispersal_parts_postpollen_prop_to_use: [0.3534934]
+  propagule_parts: [seed]
+  prepollen_parts_aborted_preflowering: [bud_tiny, bud_mid, bud_big]
+  postpollen_parts_aborted: [finished_flower,fruit_young, fruit_large_immature_01]
+  count_prepollen_reach_flowering: [flower_petals]
+  count_prepollen_aborted_preflowering : [bud_tiny, bud_mid, bud_big]
+  count_postpollen_aborted : [finished_flower, fruit_young, fruit_large_immature_01]
+  cone_count : []
+  inflorescence_count : []
+EPMI:
+  seed_costs: [flower_petals, seed_pod, seed, seed_pod, flower_calyx]
+  seed_costs_scale: [flower_petals, seed_pod, seed, flower_petals, flower_petals]
+  seed_costs_prop_to_use: [1.0, 0.3534934, 1.0, 0.6465066, 1.0]
   prepollen_FD_success_parts: [flower_petals]
   prepollen_FD_success_parts_divisor: [flower_petals]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [0]
   prepollen_parts_continue_developing_into_pack_disp: [seed_pod,flower_calyx]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals,flower_petals]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.6465066,1]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.6465066, 1.0]
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_divisor: [seed_pod]
   packaging_dispersal_parts_postpollen_prop_to_use: [0.3534934]
@@ -84,13 +108,13 @@ EPMI:
   inflorescence_count : []
 GRBU:
   seed_costs: [inflorescence_stalk, flower_petals, pedicel, seed_pod, seed]
-  seed_costs_scale: [seed, flower_petals, pedicel, seed_pod, seed]
+  seed_costs_scale: [flower_petals, flower_petals, pedicel, seed_pod, seed]
+  seed_costs_prop_to_use: [1, 1, 1, 1, 1]
   prepollen_FD_success_parts: [inflorescence_stalk, flower_petals]
   prepollen_FD_success_parts_divisor: [flower_petals, flower_petals]
   prepollen_FD_inv_extra_parts: []  
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [0]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [0]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0]
   packaging_dispersal_parts: [pedicel, seed_pod]
   packaging_dispersal_parts_divisor: [pedicel, seed_pod]
@@ -104,18 +128,18 @@ GRBU:
   cone_count : []
   inflorescence_count : [inflorescence_stalk, inflorescence_bud_small]
 GRSP:
-  seed_costs: [inflorescence_stalk_in_fruit, flower_petals, pedicel, seed_pod, seed]
-  seed_costs_scale: [seed, flower_petals, pedicel, seed_pod, seed]
+  seed_costs: [inflorescence_stalk_in_fruit, flower_petals, pedicel, seed_pod, seed, inflorescence_stalk_in_fruit, inflorescence_stalk]
+  seed_costs_scale: [seed, flower_petals, pedicel, seed_pod, seed, flower_petals, flower_petals]
+  seed_costs_prop_to_use: [0.2860428, 1.0, 1.0, 1.0, 1.0, 0.7139572,1.0]
   prepollen_FD_success_parts: [flower_petals]
   prepollen_FD_success_parts_divisor: [flower_petals]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [inflorescence_stalk_in_fruit, inflorescence_stalk]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals, flower_petals]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.7139572,1] 
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.7139572,1.0] 
   packaging_dispersal_parts: [inflorescence_stalk_in_fruit, pedicel, seed_pod]
   packaging_dispersal_parts_divisor: [seed, pedicel, seed_pod]
-  packaging_dispersal_parts_postpollen_prop_to_use: [0.2860428,1,1]
+  packaging_dispersal_parts_postpollen_prop_to_use: [0.2860428,1.0,1.0]
   propagule_parts: [seed]
   prepollen_parts_aborted_preflowering: [inflorescence_bud_small, bud_tiny, bud_small, bud_mid, bud_big, bud_just_opening]
   postpollen_parts_aborted: [finished_flower_stigma, fruit_just_starting, fruit_young, fruit_large_immature_01, fruit_large_immature_02, fruit_large_immature_03, fruit_large_immature_04, fruit_large_immature_05, fruit_large_immature_06, seed_aborted]
@@ -127,12 +151,12 @@ GRSP:
 HATE:
   seed_costs: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
   seed_costs_scale: [inflorescence_bud_big_bracts, flower_petals, seed_pod, seed]
+  seed_costs_prop_to_use: [1, 1, 1, 1]
   prepollen_FD_success_parts: [inflorescence_bud_big_bracts, flower_petals]
   prepollen_FD_success_parts_divisor: [inflorescence_bud_big_bracts, flower_petals]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [0]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [0]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0]
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_divisor: [seed_pod]
@@ -146,15 +170,15 @@ HATE:
   cone_count : []
   inflorescence_count : []
 HEPU:
-  seed_costs: [flower_petals, calyx_fruit, fruit_mature]
-  seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
+  seed_costs: [flower_petals, calyx_fruit, fruit_mature, calyx_fruit, flower_calyx]
+  seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature, flower_petals, flower_petals]
+  seed_costs_prop_to_use: [1.0, 0.291, 1.0, 0.709,1.0]
   prepollen_FD_success_parts: [flower_petals]
   prepollen_FD_success_parts_divisor: [flower_petals]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [0]
   prepollen_parts_continue_developing_into_pack_disp: [calyx_fruit, flower_calyx]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals, flower_petals]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.709,1]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.709,1.0]
   packaging_dispersal_parts: [calyx_fruit]
   packaging_dispersal_parts_divisor: [calyx_fruit]
   packaging_dispersal_parts_postpollen_prop_to_use: [0.291]
@@ -167,15 +191,15 @@ HEPU:
   cone_count : []
   inflorescence_count : []
 LEES:
-  seed_costs: [flower_petals, calyx_fruit, fruit_mature]
-  seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature]
+  seed_costs: [flower_petals, calyx_fruit, fruit_mature, calyx_fruit, flower_calyx]
+  seed_costs_scale: [flower_petals, calyx_fruit, fruit_mature, flower_petals, flower_petals]
+  seed_costs_prop_to_use: [1.0, 0.1, 1.0, 0.9, 1.0]
   prepollen_FD_success_parts: [flower_petals]
   prepollen_FD_success_parts_divisor: [flower_petals]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [0]
   prepollen_parts_continue_developing_into_pack_disp: [calyx_fruit, flower_calyx]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals, flower_petals]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.9, 1]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.9, 1.0]
   packaging_dispersal_parts: [calyx_fruit]
   packaging_dispersal_parts_divisor: [calyx_fruit]
   packaging_dispersal_parts_postpollen_prop_to_use: [0.1]
@@ -190,12 +214,12 @@ LEES:
 PELA:
   seed_costs: [flower_petals, pedicel, seed_pod, seed]
   seed_costs_scale: [flower_petals, pedicel, seed_pod, seed]
+  seed_costs_prop_to_use: [1, 1, 1, 1]
   prepollen_FD_success_parts: [flower_petals, pedicel]
   prepollen_FD_success_parts_divisor: [flower_petals, pedicel]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [0]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [0]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0]
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_divisor: [seed_pod]
@@ -209,14 +233,14 @@ PELA:
   cone_count : []
   inflorescence_count : []
 PEPU:
-  seed_costs: [cone_brown, flower_petals, flower_calyx, fruit_mature]
-  seed_costs_scale: [fruit_mature, flower_petals, flower_calyx, fruit_mature]
+  seed_costs: [cone_brown, flower_petals, flower_calyx, fruit_mature, cone_brown]
+  seed_costs_scale: [fruit_mature, flower_petals, flower_calyx, fruit_mature, flower_petals]
+  seed_costs_prop_to_use: [0.853, 1.0, 1.0, 1.0, 0.147]
   prepollen_FD_success_parts: [flower_petals, flower_calyx]
   prepollen_FD_success_parts_divisor: [flower_petals, flower_calyx]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [cone_brown]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [flower_petals]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.147]
   packaging_dispersal_parts: [cone_brown]
   packaging_dispersal_parts_divisor: [fruit_mature]
@@ -230,14 +254,14 @@ PEPU:
   cone_count : [cone_brown, cone_aborted]
   inflorescence_count : []
 PHPH:
-  seed_costs: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small, seed_pod, seed]
-  seed_costs_scale: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small, seed_pod, seed]
-  prepollen_FD_success_parts: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small]
-  prepollen_FD_success_parts_divisor: [flower_calyx, bract_flower_or_finished_flower, flower_petals, flower_petals_small]
+  seed_costs: [flower_calyx, bract_flower_or_finished_flower, flower_petals, seed_pod, seed]
+  seed_costs_scale: [flower_calyx, bract_flower_or_finished_flower, flower_petals, seed_pod, seed]
+  seed_costs_prop_to_use: [1, 1, 1, 1, 1]
+  prepollen_FD_success_parts: [flower_calyx, bract_flower_or_finished_flower, flower_petals]
+  prepollen_FD_success_parts_divisor: [flower_calyx, bract_flower_or_finished_flower, flower_petals]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [0]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [0]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0]
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_divisor: [seed_pod]
@@ -253,12 +277,12 @@ PHPH:
 PILI:
   seed_costs: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx, seed_pod, seed]
   seed_costs_scale: [flower_petals, flower_petals, flower_petals, flower_calyx, seed_pod, seed]
+  seed_costs_prop_to_use: [1, 1, 1, 1, 1, 1]
   prepollen_FD_success_parts: [inflorescence_stalk, bract_flower_or_finished_flower, flower_petals, flower_calyx]
   prepollen_FD_success_parts_divisor: [flower_petals, flower_petals, flower_petals, flower_calyx]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [0]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [0]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0]
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_divisor: [seed_pod]
@@ -274,12 +298,12 @@ PILI:
 PUTU:
   seed_costs: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
   seed_costs_scale: [flower_petals, flower_calyx, bract_flower_or_finished_flower, seed_pod, seed]
+  seed_costs_prop_to_use: [1, 1, 1, 1, 1]
   prepollen_FD_success_parts: [flower_petals, flower_calyx, bract_flower_or_finished_flower]
   prepollen_FD_success_parts_divisor: [flower_petals, flower_calyx, bract_flower_or_finished_flower]
   prepollen_FD_inv_extra_parts: []
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [0]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_divisor: [0]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0]
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_divisor: [seed_pod]
