--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -31,7 +31,6 @@ BOLE:
   prepollen_parts_continue_developing_into_propagule: [finished_flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [late_flower_petals, late_finished_flower]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.6052132, 0.7122744]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_numerator_for_ratio: [flower_petals, finished_flower]
   packaging_dispersal_parts: [seed_pod, late_flower_petals, late_finished_flower]
   packaging_dispersal_parts_divisor: [seed_pod, late_flower_petals, late_finished_flower]
   packaging_dispersal_parts_numerator: [0, flower_petals, finished_flower]
@@ -222,6 +221,7 @@ PELA:
   prepollen_FD_success_parts_divisor: [flower_petals, pedicel]
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
   prepollen_parts_continue_developing_into_pack_disp: [0]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0]
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_divisor: [seed_pod]
   packaging_dispersal_parts_numerator: [0]
