final corrections to ReproductionTissues. Now correctly dividing investment into pools.

--- a/data/accessoryParts.yml
+++ b/data/accessoryParts.yml
@@ -2,10 +2,11 @@ BAER:
   prepollen_FD_success_parts: [flower_petals, flower_style]
   prepollen_FD_success_parts_denominator: [flower_petals, flower_style]
   prepollen_parts_continue_developing_into_propagule: [flower_stigma]
-  prepollen_parts_continue_developing_into_pack_disp: [cone_brown, cone_base_brown]
-  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.125,0.125]
+  prepollen_parts_continue_developing_into_pack_disp: [cone_brown, cone_base_brown, cone_green_01, cone_green_02, cone_green_03, cone_green_04, cone_base_green_01, cone_base_green_02, cone_base_green_03, cone_base_green_04]
+  prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.125,0.125, 1, 1, 1, 1, 1, 1, 1, 1]
   packaging_dispersal_parts: [cone_brown, cone_base_brown, seed_pod]
-  packaging_dispersal_parts_prop_to_use: [0.125, 0.125, 0.0]
+  packaging_dispersal_parts_denominator: [seed, seed, seed]
+  packaging_dispersal_parts_prop_to_use: [0.875, 0.875, 1]
   propagule_parts: [seed]
   fruit_parts: [seed, seed_pod]
   prepollen_parts_aborted_preflowering: [bud_tiny, bud_small, bud_mid, bud_big, bud_just_opening, cone_aborted, cone_green_01, cone_green_02, cone_green_03, cone_green_04, cone_base_green_01, cone_base_green_02, cone_base_green_03, cone_base_green_04]  
@@ -180,7 +181,6 @@ PELA:
   packaging_dispersal_parts: [seed_pod]
   packaging_dispersal_parts_denominator: [seed_pod]
   packaging_dispersal_parts_numerator: [seed_pod]
-  packaging_dispersal_parts_postpollen_prop_to_use: [1]
   propagule_parts: [seed]
   fruit_parts: [seed, seed_pod]
   prepollen_parts_aborted_preflowering: [bud_small, bud_mid, bud_big]
@@ -200,7 +200,8 @@ PEPU:
   prepollen_parts_continue_developing_into_pack_disp: [cone_brown]
   prepollen_parts_continue_developing_into_pack_disp_prepollen_prop_to_use: [0.147]
   packaging_dispersal_parts: [cone_brown]
-  packaging_dispersal_parts_prop_to_use: [0.147]
+  packaging_dispersal_parts_denominator: [fruit_mature]
+  packaging_dispersal_parts_prop_to_use: [0.853]
   propagule_parts: [fruit_mature]
   fruit_parts: [fruit_mature]
   prepollen_parts_aborted_preflowering: [bud_tiny, bud_big, cone_aborted]
